# goit-algo2-hw-06

./: .gitignore  main.py  main.py~  pyproject.toml
